app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pt-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - anhduong.me
    secretName: anhduong-me-secret
  rules:
  - host: anhduong.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-clusterip
            port:
              number: 443
