ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-kubernetes-ingress
  namespace: haproxy-controller
spec:
  rules:
  - host: pt.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: haproxy-kubernetes-ingress
            port:
              number: 80
