pt-netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-other-namespaces
  namespace: pt
spec:
  podSelector:
    matchLabels: {}
  ingress:
  - from:
    - podSelector: {}
